--- a/src/app/routes/base/base/base.component.scss
+++ b/src/app/routes/base/base/base.component.scss
@@ -1,10 +1,23 @@
+@import '../../../../assets/scss/devices.scss';
+
 :host {
     height: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: stretch;
-    gap: 25px;
+
+    @include device(desktop) {
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: stretch;
+        gap: 25px;
+    }
+
+    @include device(mobile) {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 25px;
+    }
+
 
     .divider {
         width: 1px;
