--- a/src/app/shared/components/app-content/app-content.component.html
+++ b/src/app/shared/components/app-content/app-content.component.html
@@ -2,3 +2,6 @@
 <div class="dnd-app-container" #appContainer>
     <router-outlet></router-outlet>
 </div>
+<div class="dnd-version caption color-placeholder">
+    {{ version }}
+</div>
