--- a/src/app/shared/components/app-content/app-content.component.scss
+++ b/src/app/shared/components/app-content/app-content.component.scss
@@ -15,4 +15,10 @@
         height: calc(100% - calc($container-padding-block * 2));
         padding: $container-padding-block $container-padding-inline;
     }
+
+    .dnd-version {
+        align-self: flex-end;
+        padding-block-end: 4px;
+        padding-inline-end: 4px;
+    }
 }
