--- a/src/app/shared/components/header-bar/header-bar.component.scss
+++ b/src/app/shared/components/header-bar/header-bar.component.scss
@@ -25,7 +25,7 @@
 
     .header-bar {
         box-sizing: border-box;
-        background: var(--bg-container);
+        background: var(--bg-neutral2);
         border-bottom: 1px solid;
         border-image-slice: 1;
         border-width: 1px;
