--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -1,13 +1,9 @@
 @use 'sass:color';
 
-// #region BASE COLORS
+// #region Base colors
 
 $white: oklch(98.2% 0.004 91.45);
 $gray: oklch(9.21% 0 0);
-$gray-90: oklch(12.21% 0.015 304.04);
-$gray-70: oklch(70.9% 0.015 304.04);
-$gray-40: oklch(36.98% 0.014 302.71);
-$gray-10: oklch(6.98% 0.014 302.71);
 
 $bright-blue: oklch(51.01% 0.274 263.83);
 $electric-violet: oklch(53.18% 0.28 296.97);
@@ -16,9 +12,27 @@ $vivid-pink: oklch(69.02% 0.277 332.77);
 $hot-red: oklch(61.42% 0.238 15.34);
 $orange-red: oklch(63.32% 0.24 31.68);
 
-$bg-neutral1-light: oklch(90.2% 0.02 89.45);
-$bg-neutral2-light: oklch(80.2% 0.02 89.45);
-$bg-neutral1-dark: oklch(16.37% 0.006 300);
-$bg-neutral2-dark: oklch(13.37% 0.006 298);
+$bg-neutral1-light: oklch(92.2% 0.004 91.45);
+$bg-neutral2-light: oklch(87.2% 0.004 91.45);
+$bg-neutral1-dark: oklch(17.3% 0 0);
+$bg-neutral2-dark: oklch(22.21% 0 0);
 
-// #endregion BASE COLORS
+$link-disabled-light: oklch(82.09% 0.076 249.36);
+$link-disabled-dark: oklch(49.03% 0.046 248.79);
+
+// #endregion Base colors
+
+// #region Shades
+
+$gray-90: oklch(27.68% 0 0);
+$gray-80: oklch(37.15% 0 0);
+$gray-70: oklch(46.04% 0 0);
+$gray-60: oklch(54.52% 0 0);
+$gray-50: oklch(62.68% 0 0);
+$gray-40: oklch(70.25% 0 0);
+$gray-30: oklch(77.94% 0 0);
+$gray-20: oklch(85.45% 0 0);
+$gray-10: oklch(92.8% 0 0);
+$gray-5: oklch(96.42% 0 0);
+
+// #endregion Shades
