--- a/src/assets/scss/theming/core.theming.scss
+++ b/src/assets/scss/theming/core.theming.scss
@@ -14,6 +14,8 @@ body {
     background-color: var(--bg-neutral1);
 }
 
+// #region Colors
+
 .color-primary {
     color: var(--primary);
 }
@@ -32,9 +34,19 @@ body {
 .color-placeholder {
     color: var(--placeholder);
 }
+.color-disabled {
+    color: var(--disabled);
+}
+.color-link-disabled {
+    color: var(--link-disabled);
+}
 .color-on-bg {
     color: var(--on-bg);
 }
+
+// #endregion Colors
+
+// #region BGs
 
 .bg-primary {
     background-color: var(--primary);
@@ -51,9 +63,17 @@ body {
 .bg-neutral2 {
     background-color: var(--bg-neutral2);
 }
+.bg-stroke {
+    background-color: var(--bg-stroke);
+}
+.bg-container {
+    background-color: var(--bg-container);
+}
 .bg-gray1 {
     background-color: var(--bg-gray1);
 }
 .bg-gray2 {
     background-color: var(--bg-gray2);
 }
+
+// #endregion BGs
