--- a/src/app/shared/components/header-bar/header-bar.component.scss
+++ b/src/app/shared/components/header-bar/header-bar.component.scss
@@ -1,6 +1,7 @@
 @use 'sass:map';
 @import '../../../../assets/scss/variables.scss';
 @import '../../../../assets/scss/utils.scss';
+@import '../../../../assets/scss/devices.scss';
 
 :host {
     @include dnd-no-user-selection;
@@ -35,8 +36,13 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: $container-padding-block $container-padding-inline;
+
         gap: $container-padding-inline;
+        padding: $container-padding-block $container-padding-inline;
+        @include device(mobile) {
+            gap: 0;
+            padding: 8px 16px;
+        }
 
         .greeting-container {
             display: flex;
@@ -56,6 +62,16 @@
                 align-items: center;
                 gap: 6px;
                 height: 100%;
+            }
+
+            @include device(mobile) {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 0px;
+
+                .today-container {
+                    padding: 0;
+                }
             }
         }
 
