--- a/src/assets/scss/theming/core.theming.scss
+++ b/src/assets/scss/theming/core.theming.scss
@@ -43,6 +43,18 @@ body {
 .color-on-bg {
     color: var(--on-bg);
 }
+.color-info {
+    color: var(--info);
+}
+.color-success {
+    color: var(--success);
+}
+.color-warning {
+    color: var(--warning);
+}
+.color-error {
+    color: var(--error);
+}
 
 // #endregion Colors
 
