--- a/src/app/shared/components/header-bar/header-bar.component.html
+++ b/src/app/shared/components/header-bar/header-bar.component.html
@@ -12,6 +12,7 @@
                 }
                 }}
             </span>
+            &nbsp;
             <h6>
                 {{ 'BASE.GENERAL.GAME_DAY' | translate }}
             </h6>
