--- a/src/app/routes/base/base/base.component.scss
+++ b/src/app/routes/base/base/base.component.scss
@@ -133,16 +133,41 @@
             padding-top: var(--large-spacing);
         }
 
+        .platinum {
+            $color: oklch(66.67% 0.1 228.71);
+            color: $color;
+
+            ::ng-deep .currency-dot {
+                background-color: $color;
+            }
+        }
+
         .gold {
-            color: oklch(0.89 0.18 95.32);
+            $color: oklch(0.89 0.18 95.32);
+
+            color: $color;
+
+            ::ng-deep .currency-dot {
+                background-color: $color;
+            }
         }
 
         .silver {
-            color: oklch(0.86 0 0);
+            $color: oklch(0.86 0 0);
+
+            ::ng-deep .currency-dot {
+                background-color: $color;
+            }
         }
 
         .copper {
-            color: oklch(0.79 0.19 60.08);
+            $color: oklch(0.79 0.19 60.08);
+
+            color: $color;
+
+            ::ng-deep .currency-dot {
+                background-color: $color;
+            }
         }
     }
 }
