--- a/src/app/shared/components/input-number/input-number.component.scss
+++ b/src/app/shared/components/input-number/input-number.component.scss
@@ -52,10 +52,23 @@
     }
 
     .label {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 5px;
+
         @include typography-input;
         color: var(--subtitle);
 
         margin-bottom: calc(var(--_input-spacing) / 2);
+
+        .currency-dot {
+            height: 0.5em;
+            width: 0.5em;
+            border-radius: 100%;
+            border: 1px solid var(--subtitle);
+            box-sizing: border-box;
+        }
     }
 
     .caption {
