--- a/src/app/routes/base/base/base.component.html
+++ b/src/app/routes/base/base/base.component.html
@@ -42,13 +42,13 @@
     </div>
 
     <form class="currency-container-form" [formGroup]="currencyForm">
-        <dnd-input-number label="BASE.CURRENCY.GOLD" [formControl]="goldFormControl">
+        <dnd-input-number [currencyDot]="'gold'" label="BASE.CURRENCY.GOLD" [formControl]="goldFormControl">
         </dnd-input-number>
 
-        <dnd-input-number label="BASE.CURRENCY.SILVER" [formControl]="silverFormControl">
+        <dnd-input-number [currencyDot]="'silver'" label="BASE.CURRENCY.SILVER" [formControl]="silverFormControl">
         </dnd-input-number>
 
-        <dnd-input-number label="BASE.CURRENCY.COPPER" [formControl]="copperFormControl">
+        <dnd-input-number [currencyDot]="'copper'" label="BASE.CURRENCY.COPPER" [formControl]="copperFormControl">
         </dnd-input-number>
     </form>
 
