--- a/src/app/routes/base/base/base.component.scss
+++ b/src/app/routes/base/base/base.component.scss
@@ -35,6 +35,10 @@
         width: 1px;
         background: var(--red-to-pink-to-purple-vertical-gradient);
         margin-inline: var(--small-spacing);
+
+        @include device(mobile) {
+            display: none;
+        }
     }
 
     .inspiration-container {
@@ -48,7 +52,7 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            align-content: flex-start;
+            justify-content: space-around;
             align-items: flex-start;
             gap: var(--medium-spacing);
         }
@@ -92,24 +96,8 @@
             }
         }
 
-        .pill-group .pill:nth-child(6n + 1) {
+        .pill-group .pill {
             --pill-accent: var(--bright-blue);
-        }
-
-        .pill-group .pill:nth-child(6n + 2) {
-            --pill-accent: var(--french-violet);
-        }
-
-        .pill-group .pill:nth-child(6n + 3) {
-            --pill-accent: var(--hot-red);
-        }
-
-        .pill-group .pill:nth-child(6n + 4) {
-            --pill-accent: var(--electric-violet);
-        }
-
-        .pill-group .pill:nth-child(6n + 5) {
-            --pill-accent: var(--vivid-pink);
         }
     }
 
@@ -135,18 +123,6 @@
 
         &-actions {
             padding-top: var(--large-spacing);
-        }
-
-        .gold {
-            color: oklch(0.89 0.18 95.32);
-        }
-
-        .silver {
-            color: oklch(0.86 0 0);
-        }
-
-        .copper {
-            color: oklch(0.79 0.19 60.08);
         }
     }
 }
