--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -12,6 +12,10 @@ $vivid-pink: oklch(69.02% 0.277 332.77);
 $hot-red: oklch(61.42% 0.238 15.34);
 $orange-red: oklch(63.32% 0.24 31.68);
 
+$currency-gold: oklch(0.89 0.18 95.32);
+$currency-silver: oklch(0.86 0 0);
+$currency-copper: oklch(0.79 0.19 60.08);
+
 $bg-neutral1-light: oklch(92.2% 0.004 91.45);
 $bg-neutral2-light: oklch(87.2% 0.004 91.45);
 $bg-neutral1-dark: oklch(17.3% 0 0);
