--- a/src/assets/scss/theming/themes/light.theme.scss
+++ b/src/assets/scss/theming/themes/light.theme.scss
@@ -21,6 +21,11 @@
     --hot-red: #{$hot-red};
     --orange-red: #{$orange-red};
 
+    // Currency
+    --currency-gold: #{$currency-gold};
+    --currency-silver: #{$currency-silver};
+    --currency-copper: #{$currency-copper};
+
     // Status
     --info: #{$vivid-pink};
     --success: #{$bright-blue};
